[project]
name = "avilpage-com"
version = "0.1.0"
description = "Improving health & wealth through technology"
requires-python = "~=3.9.0"
dependencies = [
    "aiohttp>=3.12.15",
    "ghp-import2>=1.0.1",
    "jinja2>=3.1.6",
    "nikola>=8.3.3",
    "tomlkit>=0.13.3",
    "watchdog>=6.0.0",
    "Markdown>=3.3.6",
    "ws4py>=0.4.2",
    "beautifulsoup4>=4.11.2"
]

